feat(conncetor): added namespace status to public and agent api
