# internal/connector/internal/api/admin/private/model_connector_namespace_status.go
@@ -1,0 +1,17 @@
+/*
+ * Connector Service Fleet Manager Admin APIs
+ *
+ * Connector Service Fleet Manager Admin is a Rest API to manage connector clusters.
+ *
+ * API version: 0.0.3
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ConnectorNamespaceStatus struct for ConnectorNamespaceStatus
+type ConnectorNamespaceStatus struct {
+	State              ConnectorNamespaceState `json:"state"`
+	ConnectorsDeployed int32                   `json:"connectors_deployed"`
+	Error              string                  `json:"error,omitempty"`
+}
