# internal/connector/internal/api/private/model_connector_namespace_status.go
@@ -1,0 +1,19 @@
+/*
+ * Connector Service Fleet Manager Private APIs
+ *
+ * Connector Service Fleet Manager apis that are used by internal services.
+ *
+ * API version: 0.0.3
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package private
+
+// ConnectorNamespaceStatus Schema for the request to update a data plane namespaces' status
+type ConnectorNamespaceStatus struct {
+	Id                 string            `json:"id,omitempty"`
+	Phase              string            `json:"phase,omitempty"`
+	Version            string            `json:"version,omitempty"`
+	ConnectorsDeployed int32             `json:"connectors_deployed,omitempty"`
+	Conditions         []MetaV1Condition `json:"conditions,omitempty"`
+}
